# hevy-github-graph

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android.yml  ios.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hevy/graphwidget/ui/: MainActivity.kt  WidgetConfigActivity.kt
android/app/src/main/java/com/hevy/graphwidget/widget/: ColorTheme.kt  GraphRenderer.kt  HevyGraphWidgetProvider.kt  WidgetPreferences.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_widget_config.xml  widget_layout.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: widget_info.xml
ios/HevyGraphWidget/: ContentView.swift  HevyGraphWidgetApp.swift  Info.plist
ios/HevyGraphWidget.xcodeproj/: project.pbxproj
ios/HevyGraphWidget/Data/: DataStore.swift  HevyClient.swift  WorkoutAggregator.swift
ios/HevyGraphWidget/Models/: ColorTheme.swift  Workout.swift
ios/HevyGraphWidget/Views/: ContributionGraphView.swift
ios/HevyGraphWidgetExtension/: HevyGraphWidget.swift  HevyGraphWidgetBundle.swift  HevyGraphWidgetExtension.entitlements  Info.plist
ios/HevyGraphWidgetExtension/WidgetAssets.xcassets/AccentColor.colorset/: Contents.json
ios/HevyGraphWidgetExtension/WidgetAssets.xcassets/WidgetBackground.colorset/: Contents.json
src/: aggregate.rs  api.rs  cli.rs  main.rs  models.rs  normalize.rs  render.rs
(+8 files in other folders)
